Update title of _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            HPSTR Theme
+title:            Ardour 3
 description:      A responsive Jekyll theme with modern tendencies from designer Michael Rose.
 disqus_shortname: hpstrtheme
 reading_time:     true
