--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:              http://localhost:4000
 # Owner/author information
 owner:
   name:           Bruno Ruviaro
-  avatar:         avatar.jpg
+  avatar:         ardour3-icon.png
   bio:            "Bruno is from Brazil."
   email:          
   # Social networking links used in footer. Update and remove as you like.
@@ -22,19 +22,19 @@ owner:
   tumblr:         
   # For Google Authorship https://plus.google.com/authorship
   # google plus id, include the '+', eg +mmistakes
-  google_plus:    +MichaelRoseDesign
+  google_plus:    
 
 # Background image to be tiled on all pages
 background:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   UA-2011187-5
+google_analytics:   #UA-2011187-5
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Los_Angeles
 future:      true
 highlighter: pygments
 markdown:    kramdown
