--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:            Ardour 3
 description:      An updated version of the original FLOSS manual.
-disqus_shortname: hpstrtheme
+disqus_shortname: 
 reading_time:     true
-words_per_minute: 200
+words_per_minute: 50
 url:              http://localhost:4000
 
 # Owner/author information
