Update url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Ardour 3
 description:      An updated version of the original FLOSS manual.
 disqus_shortname: 
 reading_time:     true
-words_per_minute: 50
-url:              http://localhost:4000
+words_per_minute: 100
+url:              http://brunoruviaro.github.io/ardour3-floss-tutorial
 
 # Owner/author information
 owner:
