--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,10 @@ title:            Ardour 3
 description:      An updated version of the original FLOSS manual.
 disqus_shortname: 
 reading_time:     true
-words_per_minute: 100
-url:              http://brunoruviaro.github.io/ardour3-floss-tutorial
+words_per_minute: 120
+url:              http://localhost:4000 
+
+#http://brunoruviaro.github.io/ardour3-floss-tutorial
 
 # Owner/author information
 owner:
@@ -65,4 +67,4 @@ kramdown:
     coderay_css: class
 
 include: [".htaccess"]
-exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
+exclude: ["drafts", "lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
