--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Menu navigation links
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Contents
+  url: https://brunoruviaro.github.io/ardour3-floss-tutorial/tags
 
-- title: External Link
-  url: http://mademistakes.com
+#- title: External Link
+ # url: http://mademistakes.com
