Update config with live url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ description:      An updated version of the original FLOSS manual.
 disqus_shortname: 
 reading_time:     true
 words_per_minute: 120
-url:              http://localhost:4000 
+url:              http://brunoruviaro.github.io/ardour3-floss-tutorial
+
+#http://localhost:4000 
 
 #http://brunoruviaro.github.io/ardour3-floss-tutorial
 
